[tool.poetry]
name = "sliders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

bitsandbytes = "0.41.1"
dadaptation = "3.1"
diffusers = "0.20.2"
ipython = "8.7.0"
lion_pytorch = "0.1.2"
lpips = "0.1.4"
matplotlib = "3.6.2"
numpy = "1.23.5"
opencv_python = "4.5.5.64"
opencv_python_headless = "4.7.0.68"
pandas = "1.5.2"
Pillow = "10.1.0"
prodigyopt = "1.0"
pydantic = "1.10.3"
PyYAML = "6.0.1"
Requests = "2.31.0"
safetensors = "0.3.1"
torchvision = {version = "0.15.2+cu118", source = "torch-cu118"}
tqdm = "4.64.1"
transformers = "4.27.4"
wandb = "0.12.21"
xformers = "0.0.21"
torch = {version = "2.0.1+cu118", source = "torch-cu118"}
torchaudio = {version = "2.0.2+cu118", source = "torch-cu118"}
accelerate = "^0.26.0"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"


[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
